<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/buttonAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
