<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:paddingEnd="24dp"/>

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:paddingEnd="24dp"/>

        <RadioButton
            android:id="@+id/radioUkrainian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ukrainian"/>
    </RadioGroup>

</LinearLayout>
