<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipient"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>
</LinearLayout>
