<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_date"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editFilterDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/filter_date_hint"
            android:inputType="text"
            android:layout_weight="1"
            android:paddingEnd="8dp"/>

        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listTransactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:dividerHeight="1dp"
        android:divider="@android:color/darker_gray"
        android:layout_weight="1"/>
</LinearLayout>
